--- a/chrome-ext/manifest.json
+++ b/chrome-ext/manifest.json
@@ -1,8 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Block data URI attack",
-  "short_name": "block-data-uri",
-  "description": "This extension prevents against phishing scheme in which attackers link to a data url to inject malicious code",
+  "description": "This extension prevents against phishing scheme in which attackers link to a data url to inject malicious code, by blocking all clickable links to data urls.",
   "version": "1.0",
   "icons": {
     "16": "icons/16.png",
